examples/errors_syntax.diag
error[E2003]: expected an expression but found ';'
 --> examples/errors_syntax.kl:6:9
  |
6 | let x = ;         // missing expression after '='
  |         ^
error[E2003]: expected an expression but found ')'
 --> examples/errors_syntax.kl:7:14
  |
7 | let y = (1 + );   // missing right operand of '+'
  |              ^
